<resources>
    <string name="app_name">RecyclerViewImageLoad</string>
    <string name="image_item">image_item</string>
    <string name="item_test">item test</string>
    <string name="return_to_top">回到顶部</string>
    <string name="pic">picture</string>
    <string name="header">Header</string>
    <string name="footer">Footer</string>
    <string name="add_footer">添加尾部</string>
    <string name="add_header">添加头部</string>
    <string name="remove_header">删除头部</string>
    <string name="remove_footer">删除尾部</string>
    <string name="no_header">There ain\'t any header</string>
    <string name="no_footer">There ain\'t any footer</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="xxx">xxx</string>
    <string name="add1">加一</string>
    <string name="minus1">减一</string>
    <string name="test_text">Test Text</string>
    <string name="post">post</string>
    <string name="tf">TF</string>
    <string name="info">INFO</string>
    <string name="ttt">True</string>
    <string name="fff">False</string>
</resources>