<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <Button
            android:id="@+id/remove_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/remove_footer" />

        <Button
            android:id="@+id/add_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/add_footer" />

        <Button
            android:id="@+id/remove_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/remove_header" />

        <Button
            android:id="@+id/add_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_header" />

    </LinearLayout>

</androidx.cardview.widget.CardView>