<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/to_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/return_to_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/remove_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/remove_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_footer"
        app:layout_constraintBottom_toTopOf="@+id/remove_footer"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/add_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_header"
        app:layout_constraintBottom_toTopOf="@+id/remove_header"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/remove_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/remove_header"
        app:layout_constraintBottom_toTopOf="@+id/add_footer"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <com.example.recyclerviewimageload.DragFloatActionButton
            android:id="@+id/eee"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/__3png_com" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>