<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <Button
            android:id="@+id/to_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_top"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/remove_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_footer"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/to_top"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/add_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_footer"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/remove_footer"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/remove_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_header"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/add_footer"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/add_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_header"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/remove_header"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <com.example.recyclerviewimageload.DragFloatActionButton
                android:id="@+id/eee"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/__3png_com" />
        </FrameLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>